# llm

./: .Rprofile  .env.secret  .nojekyll  DESCRIPTION  Makefile  README.md  _setup.R  _todo.md  index.html  listings.json  outline.md  pyproject.toml  robots.txt  search.json  secret.R  secret.py  setup.html  sitemap.xml  workshop-01.html  workshop-02.html  workshop-03-break.html  workshop-04.html  workshop-05.html  workshop-06-break.html  workshop-07.html  workshop-08.html  workshop-09-break.html  workshop-10.html  workshop.html
.github/workflows/: publish.yml
_demos/03_clearbot/: app.py  offcanvas.py  tools.py
_demos/18_manual-tools/: 18_manual-tools-app.R
_demos/19_tools/: 19_weather-tool-01-start.ipynb  19_weather-tool-01-start.py  19_weather-tool-02-end.ipynb  19_weather-tool-02-end.py  19_weather-tool.R  19_weather-tool.ipynb  19_weather-tool.py
_demos/27_demo_databot/: README.md
_exercises/: 01_hello-llm.py  08_vision.R  10_structured-output.R
_exercises/01_hello-llm/: 01_hello-llm.R  01_hello-llm.ipynb  01_hello-llm.py
_exercises/02_word-game/: 02_word-game.R  02_word-game.py
about/: index.html
data/: _airbnb-asheville.R  airbnb-asheville.csv
slides/: slides-00.html  slides-01-intro.html  slides-01-intro.qmd  slides-02.html  slides-02.qmd  slides-03.html  slides-03.qmd  slides-04.html  slides-05.html  slides-05.qmd  slides-07.html  slides-07.qmd  slides-08.html  slides-08.qmd  slides-10.html  slides-10.qmd  slides.scss
website/: _metadata.yml  _quarto.yml  index.qmd  setup.qmd  styles.scss  workshop-01.qmd  workshop-02.qmd  workshop-04.qmd  workshop-05.qmd  workshop-07.qmd  workshop-08.qmd  workshop-10.qmd
(+103 files in other folders)
