[project]
name = "posit-conf-2025-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "chatlas>=0.11.2",
    "dotenv>=0.9.9",
    "openai>=1.102.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pyhere>=1.0.3",
    "querychat",
    "shiny>=1.4.0",
    "shinychat",
]

[tool.uv.sources]
chatlas = { git = "https://github.com/posit-dev/chatlas" }
querychat = { git = "https://github.com/posit-dev/querychat" }
shinychat = { git = "https://github.com/posit-dev/shinychat" }
shiny = { git = "https://github.com/posit-dev/py-shiny" }
